--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ span {
     justify-content: center;
     align-items: center;
     padding: 3rem; 
-    color: #rgb(0, 0, 0); 
+    color: #000000; 
 }
 
 .services-box:hover {
